Progress commit for project schedule interface
- Removed 'hidden' tag from buttons in project details view
- Adding the side panel back info dashboard

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2337,3 +2337,18 @@ section.project-info {
 .input-group.date-range {
 	width: 16rem;
 }
+
+
+/* ACCORDION CONTROL
+----------------------------- */
+.accordion {
+	.panel-heading {
+		padding: 0;
+	}
+	.panel-heading a {
+		display: block;
+		padding: 1.25rem;
+		font-weight: bold;
+		color: #000;
+	}
+}
