--- a/modules/users/client/views/user-partials/user-activities.html
+++ b/modules/users/client/views/user-partials/user-activities.html
@@ -1,7 +1,7 @@
 <div class="view-content dashboard" id="project-view">
 
     <!-- LEFT PANEL -->
-    <aside class="left-panel hidden">
+    <aside class="left-panel">
         <tmpl-system-menu x-menu-context="'mylist'"></tmpl-system-menu>
     </aside>
 
