--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -10,10 +10,10 @@
 			<!-- BEGIN: PROJECT PHASE CONTAINER -->
 			<div class="panel panel-default accordion">
 				<div class="panel-heading" role="tab" id="phaseOne">
-					<a role="button" data-toggle="collapse" href="#phaseCollapseOne" aria-expanded="true" aria-controls="phaseCollapseOne">
+					<a class="clearfix" role="button" data-toggle="collapse" href="#phaseCollapseOne" aria-expanded="true" aria-controls="phaseCollapseOne">
 						<span class="pull-left">Phase Name</span>
-						<span class="glyphicon glyphicon-chevron-down pull-right"></div>
-						<span class="glyphicon glyphicon-chevron-up pull-right"></div>
+						<span class="glyphicon glyphicon-chevron-down pull-right"></span>
+						<span class="glyphicon glyphicon-chevron-up pull-right"></span>
 					</a>
 				</div>
 				<div id="phaseCollapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="phaseCollapseOne">
