Fixing issue with the initial column in the topic-modal-select.html

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2371,3 +2371,12 @@ section.project-info {
 		}
 	}
 }
+
+/* SELECT TOPIC MODAL
+----------------------------- */
+.select-topic-modal {
+	.select-col {
+		width: 5rem;
+		text-align: center;
+	}
+}
