Progress commit for ESM-86
- Continued updating of administrative 'system' views
- Fixed an issue in admin.abstract.html not using correct markup

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1982,6 +1982,14 @@ $sidenav-width: 18rem;
 		text-align: left;
 		word-break: break-all;
 	}
+	
+	.actions-col {
+		text-align: center;
+	}
+	
+	.single-action {
+		width: 6rem;
+	}
 }
 
 
