--- a/modules/core/client/views/admin.abstract.html
+++ b/modules/core/client/views/admin.abstract.html
@@ -1,4 +1,8 @@
-<section class="row">
-	<ui-view class='col-sm-10 tr-slide' id="main-content-section">DERPPPP</ui-view>
-	<div class='col-sm-2 tr-slide' id="main-side-section"></div>
+<section>
+	<div class="view-content">
+		<section class="main-panel">
+			<ui-view id="main-content-section"></ui-view>
+		</section>
+		<div class="hidden" id="main-side-section"></div>
+	</div>
 </section>
