--- a/modules/email-templates/client/views/email-template-list.html
+++ b/modules/email-templates/client/views/email-template-list.html
@@ -1,20 +1,26 @@
-<h1 class="page-title no-lower-margin">Email Templates</h1>
+<div class="email-templates-view">
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.emailtemplate.create()">+ Add New Email Template</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+	<div class="view-title-container">
+		<h1>Email Templates</h1>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-sm-12">
+	<div class="view-body-container">
+		<div class="button-bar clearfix">
+			<a class="btn btn-default btn-sm" ui-sref="admin.emailtemplate.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add Email Template</span>
+			</a>
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+		</div>
+		
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.emailtemplate.detail({emailtemplateId:o._id})" class="clickable">
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
 					<td data-title="'Group'"  filter="{'group':'text'}"   sortable="'group'">{{o.group}}</td>
-					<td width="1%" class="text-right">
+					<td class="actions-col" header-class="'actions-col single-action'">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.emailtemplate.edit({emailtemplateId:o._id})">
 							<i class="glyphicon glyphicon-pencil"></i>
 						</a>
@@ -28,5 +34,5 @@
 			</table>
 		</section>
 	</div>
-
+	
 </div>
