--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -1,14 +1,20 @@
-<h1 class="page-title no-lower-margin">Condition Library</h1>
+<div class="condition-library-view">
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.condition.create()">+ Add New Condition</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+	<div class="view-title-container">
+		<h1>Condition Library</h1>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-sm-12">
+	<div class="view-body-container">
+		<div class="button-bar clearfix">
+			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.condition.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add New Condition</span>
+			</a>
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+		</div>
+
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.condition.detail({conditionId:o._id})" class="clickable">
@@ -17,7 +23,7 @@
 					<td data-title="'Subject'" filter="{'subject':'text'}"    sortable="'subject'" >{{o.subject}}</td>
 					<td data-title="'Stages'"   filter="{'stages':'text'}"  sortable="'stages'" >{{o.stageString}}</td>
 					<td data-title="'Pillars'"  filter="{'pillars':'text'}" sortable="'pillars'"  >{{o.pillarString}}</td>
-					<td width="1%" class="text-right">
+					<td class="actions-col" header-class="'actions-col single-action'">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.condition.edit({conditionId:o._id})">
 						<i class="glyphicon glyphicon-pencil"></i>
 						</a>
@@ -30,6 +36,7 @@
 				</tr>
 			</table>
 		</section>
+		
 	</div>
 
 </div>
