--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -1,7 +1,7 @@
 <div class="organizations-list-view">
 
 	<div class="view-title-container">
-		<h1 class="page-title no-lower-margin">Organizations</h1>
+		<h1>Organizations</h1>
 	</div>
 
 	<div class="view-body-container">
