--- a/modules/roles/client/views/role-list.html
+++ b/modules/roles/client/views/role-list.html
@@ -1,21 +1,26 @@
-<h1 class="page-title no-lower-margin">System Roles</h1>
+<div class="system-roles-view"></div>
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.roles.create()">+ Add New System Role</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+	<div class="view-title-container">
+		<h1>System Roles</h1>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-sm-12">
+	<div class="view-body-container">
+		<div class="button-bar clearfix">
+			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.roles.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add System Role</span>
+			</a>
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+		</div>
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.roles.detail({roleCode:o.code})" class="clickable">
 					<td data-title="'Role'"  filter="{'code':'text'}"   sortable="'code'">{{o.code}}</td>
 					<td data-title="'Organization Code'"  filter="{'orgCode':'text'}"   sortable="'orgCode'">{{o.orgCode}}</td>
 					<td data-title="'Role Code'"  filter="{'roleCode':'text'}"   sortable="'roleCode'">{{o.roleCode}}</td>
-					<td width="1%" class="text-right">
+					<td class="actions-col single-action" header-class="'actions-col single-action'">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.roles.edit({roleCode:o.code})">
 							<i class="glyphicon glyphicon-pencil"></i>
 						</a>
