--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -1,32 +1,33 @@
-<h1 class="page-title no-lower-margin">Template Library</h1>
+<div class="template-library-view">
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.template.create()">+ Add New Template</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+	<div class="view-title-container">
+		<h1>Template Library</h1>
 	</div>
-</div>
-
-<div class="row">
-	<div class="col-sm-12">
+	
+	<div class="view-body-container">
+		<div class="button-bar clearfix">
+			<a class="btn btn-default btn-sm" ui-sref="admin.template.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add Template</span>
+			</a>
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+		</div>
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
 				<tr ng-repeat="o in $data" ui-sref="admin.template.detail({templateId:o.id})" class="clickable">
 					<td data-title="'Document Type'"
 						filter="{'documentType':'text'}"
 						sortable="'name'">{{o.documentType}}</td>
-
 					<td data-title="'Version Number'"
 						sortable="'versionNumber'"
 						class="text-center">{{o.versionNumber}}</td>
-
 					<td data-title="'Date Updated'"
 						sortable="'dateUpdated'"
 						class="text-center">{{o.dateUpdated | date:'y-MM-dd HH:mm a'}}</td>
-
 					<td width="1%" class="text-right">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.template.edit({templateId:o.id})"><i class="glyphicon glyphicon-pencil"></i></a></td>
-					
 					<td width="1%" class="text-right">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.template.test({templateId:o.id})">
 						<i class="glyphicon glyphicon-play"></i>
@@ -39,5 +40,5 @@
 				</tr>
 			</table>
 		</section>
-	</div>
+	</div> <!-- / view-body-container- ->
 </div>
