--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -1,18 +1,21 @@
-<h1 class="page-title no-lower-margin">
-	Valued Components Library
-</h1>
-
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.topic.create()">+ Add New Valued Component</a>
-		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+<div class="vc-library-view">
+	
+	<div class="view-title-container">
+		<h1>Valued Components Library</h1>
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-sm-12">
+	<div class="view-body-container">
+		<div class="button-bar clearfix">
+			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.topic.create()">
+				<span class="glyphicon glyphicon-plus"></span>
+				<span>Add Valued Component</span>
+			</a>
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+		</div>
+
 		<section class="panel panel-default">
-
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
 				<tr ng-repeat="o in $data" ui-sref="admin.topic.detail({topicId:o._id})" class="clickable">
 					<td data-title="'Pillar'"  sortable="'pillar'"  filter="{'pillar':'select'}" filter-data="pillars" 		>{{o.pillar}}</td>
@@ -31,4 +34,5 @@
 			</table>
 		</section>
 	</div>
+
 </div>
