--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -2,7 +2,7 @@
 
 	<form name="projectForm" ng-submit="saveProject(projectForm.$valid)" novalidate>
 
-		<div class="view-title-container clearfix">
+		<div class="view-title-container no-border clearfix">
 			<h1><span>Add/Edit Project</span><span ng-show="project.name">&nbsp; &rsaquo; &nbsp;{{ project.name }}</span></h1>
 			<div class="view-title-actions">
 				<button class="btn btn-default btn-sm" ng-if="!isNew" ui-sref="p.detail">Cancel</button>
@@ -217,18 +217,13 @@
 				<p>Your project submission has been sent to EAO and is waiting to be received.</p>
 				<p>You will be contacted shortly regarding the next steps.</p>
 			</div>
-			
-			<hr>
 
-			<div class="row">
-				<div class="col-sm-6 text-left">
-					<div class="form-control-static">{{ project.dateUpdated | amDateFormat:'MMM Do, YYYY hh:mm a' }}</div>
-				</div>
-				<div class="col-sm-6 text-right">
-					<button class="btn btn-default" ng-if="!isNew" ui-sref="p.detail">Cancel</button>
-					<button class="btn btn-default" ng-if="isNew" ui-sref="projects">Cancel</button>	
-					<button class="btn btn-default" type="submit">Save</button>
-					<button class="btn btn-default" ng-click="submitProject(projectForm.$valid)" ng-if="project.status === 'Initiated'">Submit Project</button>
+			<div class="button-bar bottom clearfix">
+				<div class="pull-right">
+					<button class="btn btn-default btn-sm" ng-if="!isNew" ui-sref="p.detail">Cancel</button>
+					<button class="btn btn-default btn-sm" ng-if="isNew" ui-sref="projects">Cancel</button>	
+					<button class="btn btn-default btn-sm" type="submit">Save</button>
+					<button class="btn btn-default btn-sm" ng-click="submitProject(projectForm.$valid)" ng-if="project.status === 'Initiated'">Submit Project</button>
 				</div>
 			</div>
 		</div><!-- / VIEW BODY CONTAINER -->
