--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -1,14 +1,14 @@
 <div class="recent-activity-admin-view">
 
-	<div class="view-title-container">
-		<h1>Recent Activity / News Feed</h1>
+	<div class="view-title-container no-border">
+		<h1>Recent News</h1>  
 	</div>
 
 	<div class="view-body-container">
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.recentactivity.create()">
 				<span class="glyphicon glyphicon-plus"></span>
-				<span>Add Recent Activity</span>
+				<span>Add Recent News</span>
 			</a>
 			<div class="pull-right">
 				<show-filter x-toggle-filter="toggleFilter"></show-filter>
