--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -36,7 +36,7 @@
 									<button class="btn btn-link">
 										<span class="glyphicon glyphicon-pencil" data-toggle="modal" data-target="#addMilestoneModal"></span>
 									</button>
-									<button class="btn btn-link" data-toggle="modal" data-target="#confirmModal">
+									<button class="btn btn-link" data-toggle="modal" data-target="#confirmModal" ng-click="openModal(row._id)">
 										<span class="glyphicon glyphicon-trash"></span>
 									</button>
 								</td>
@@ -182,11 +182,11 @@
 				<h3 class="modal-title">Action Confirmation</h3>
 			</div>
 			<div class="modal-body">
-				<p>Confirmation Message Here</p>
+				<p>Are you sure you want to remove this milestone?</p>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-primary" disabled="disabled">OK</button>
+				<button type="button" class="btn btn-primary" ng-click="confirmRemoveMilestone()" data-dismiss="modal">OK</button>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
